# rav

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README  README.md  Venenorosmd@msn.com  app.py  models.py  pyproject.toml  rav.py  rediswebpy.py  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml  publish.yml
rav2/: __init__.py  models.py
rav2/static/: script.js  style.css
rav2/templates/: _funcs.html  _standard.html  error.html  gallery.html  gallery_list.html  index.html  manual.html  standard.html  user.html
static/: script.js  style.css
templates/: error.html  funcs.jinja2  gallery.html  gallery.jinja2  gallery_list.html  gallery_list.jinja2  index.html  index.jinja2  manual.html  manual.jinja2  standard.html  standard.jinja2  user.html  user.jinja2
tests/: conftest.py  data.sql  test_auth.py  test_factory.py  test_public.py  test_user.py
