[project]
name = "rav2"
version = "2.0.0"
authors = [
    {name = "Shish", email = "shish@shishnet.org"},
]
description = "Random Avatar Hosting"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask",
    "Flask-SQLAlchemy",
    "Pillow",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest-cov",
    "types-Pillow",
]

[tool.setuptools]
py-modules = ["rav2"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["rav2"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "E712",  # sqlalchemy requires "Table.column == True"
]
